加入gpt-通义千问和智谱清言